GoogleOAuth 리팩토링